--- a/video/video.html
+++ b/video/video.html
@@ -88,72 +88,110 @@
             </div>
           </div>
         </div>
-      </div>
+        <div class="comments" >
+          <div class="comments-section">
+            <h3>100,234 Comments</h3>
+            <span><i class="fa-solid fa-sliders"></i> Sort by </span>
+          </div>
+
+          <div class="add-comments">
+            <img src="./assets/profile.jpg" alt="" />
+            <input
+              type="text"
+              placeholder="Add a comment..."
+              class="comment-input"
+            />
+          </div>
+          <div class="comment" id="comments">
+            <!-- <img
+              class="profile-pic"
+              src="./assets/commentpro.jpg"
+              alt="Profile Picture"
+            />
+            <div class="comment-content">
+              <div class="user-info">
+                <span class="username">@Saakshii08</span>
+                <span class="time">1 year ago</span>
+              </div>
+              <p class="comment-text">
+                I couldn't agree more! His music is a safe space for us to
+                explore and navigate our emotions, and that's a true gift
+                <span class="emoji">❤️</span>
+              </p>
+              <div class="actions">
+                <i class="fa-regular fa-thumbs-up"></i
+                ><span class="count">2</span>
+                <i class="fa-regular fa-thumbs-down"></i>
+                <span class="reply">Reply</span>
+              </div>
+            </div>
+          </div> -->
+    </div>
+</div>
       <div class="suggestion-side" id="suggestion-side"></div>
     </div>
 
-    <script>  
-    //   const params = new URLSearchParams(window.location.search);
+    <script>
+      //   const params = new URLSearchParams(window.location.search);
 
-    //   const chanelLogo = params.get("chanelLogo");
-    //   const title = params.get("title");
-    //   const chanelName = params.get("chanelName");
-    //   const views= params.get("views");
-    //   const hashtag=params.get("hashtag");
-    //   const desc=params.get("desc");
-    //   const duration=params.get("duration");
+      //   const chanelLogo = params.get("chanelLogo");
+      //   const title = params.get("title");
+      //   const chanelName = params.get("chanelName");
+      //   const views= params.get("views");
+      //   const hashtag=params.get("hashtag");
+      //   const desc=params.get("desc");
+      //   const duration=params.get("duration");
 
-    //   const videoDetails = document.getElementById("video-details");
-    //   videoDetails.innerHTML = `
-    //       <video controls>
-    //         <source src="./assets/demo-video.mp4" type="video/mp4" />
-    //       </video>
-    //       <h4>
-    //          ${title}
-    //       </h4>
-    //     <div class="details-sec">
-    //         <div class="video-left">
-    //           <img src="${chanelLogo}" alt="" />
-    //           <div class="mid-sec">
-    //             <h4>${chanelName}</h4>
-    //             <span>804k subscribers</span>
-    //           </div>
-    //           <button>Subscribe</button>
-    //         </div>
-   
-    //     <div class="video-right">
-    //         <div class="like-dislike-group">
-    //             <button class="like-button">
-    //               <i class="fa-regular fa-thumbs-up"></i>
-    //               750K
-    //             </button>
-    //             <div class="divider"></div>
-    //             <button class="dislike-button">
-    //               <i class="fa-regular fa-thumbs-down"></i>
-    //             </button>
-    //         </div>
-    //           <button class="action-button">
-    //             <i class="fa-solid fa-share"></i> Share
-    //           </button>
-    //           <button class="action-button">
-    //             <i class="fa-solid fa-ellipsis"></i>
-    //           </button>
-    //     </div>
-    //      </div>
-    //      <div class="video-section">
-    //     <div class="video-stats">
-    //     <span class="views">${views}</span>
-    //     <span class="dot">•</span>
-    //     <span class="time">${duration}</span>
-    //     <span class="tag">${hashtag}</span>
-    //     </div>
-    //      <div class="video-description">
-    //       ${desc}
-    //     </div>
-    //     </div>
-        
-        
-    //     `;
+      //   const videoDetails = document.getElementById("video-details");
+      //   videoDetails.innerHTML = `
+      //       <video controls>
+      //         <source src="./assets/demo-video.mp4" type="video/mp4" />
+      //       </video>
+      //       <h4>
+      //          ${title}
+      //       </h4>
+      //     <div class="details-sec">
+      //         <div class="video-left">
+      //           <img src="${chanelLogo}" alt="" />
+      //           <div class="mid-sec">
+      //             <h4>${chanelName}</h4>
+      //             <span>804k subscribers</span>
+      //           </div>
+      //           <button>Subscribe</button>
+      //         </div>
+
+      //     <div class="video-right">
+      //         <div class="like-dislike-group">
+      //             <button class="like-button">
+      //               <i class="fa-regular fa-thumbs-up"></i>
+      //               750K
+      //             </button>
+      //             <div class="divider"></div>
+      //             <button class="dislike-button">
+      //               <i class="fa-regular fa-thumbs-down"></i>
+      //             </button>
+      //         </div>
+      //           <button class="action-button">
+      //             <i class="fa-solid fa-share"></i> Share
+      //           </button>
+      //           <button class="action-button">
+      //             <i class="fa-solid fa-ellipsis"></i>
+      //           </button>
+      //     </div>
+      //      </div>
+      //      <div class="video-section">
+      //     <div class="video-stats">
+      //     <span class="views">${views}</span>
+      //     <span class="dot">•</span>
+      //     <span class="time">${duration}</span>
+      //     <span class="tag">${hashtag}</span>
+      //     </div>
+      //      <div class="video-description">
+      //       ${desc}
+      //     </div>
+      //     </div>
+
+      //     `;
     </script>
   </body>
   <script src="video.js" type="module"></script>
