--- a/video/video.html
+++ b/video/video.html
@@ -103,7 +103,8 @@
             />
           </div>
           <div class="comment" id="comments">
-            <!-- <img
+            <div class="comData">  
+            <img
               class="profile-pic"
               src="./assets/commentpro.jpg"
               alt="Profile Picture"
@@ -118,14 +119,15 @@
                 explore and navigate our emotions, and that's a true gift
                 <span class="emoji">❤️</span>
               </p>
+            </div>
+            </div>
               <div class="actions">
                 <i class="fa-regular fa-thumbs-up"></i
                 ><span class="count">2</span>
                 <i class="fa-regular fa-thumbs-down"></i>
                 <span class="reply">Reply</span>
               </div>
-            </div>
-          </div> -->
+          </div>
     </div>
 </div>
       <div class="suggestion-side" id="suggestion-side"></div>
