--- a/video/video.html
+++ b/video/video.html
@@ -90,7 +90,7 @@
         </div>
         <div class="comments" >
           <div class="comments-section">
-            <h3>100,234 Comments</h3>
+            <h3><span id="comment-count">0</span> Comments</h3>
             <span><i class="fa-solid fa-sliders"></i> Sort by </span>
           </div>
 
@@ -103,7 +103,7 @@
             />
           </div>
           <div class="comment" id="comments">
-            <div class="comData">  
+            <!-- <div class="comData">  
             <img
               class="profile-pic"
               src="./assets/commentpro.jpg"
@@ -126,7 +126,7 @@
                 ><span class="count">2</span>
                 <i class="fa-regular fa-thumbs-down"></i>
                 <span class="reply">Reply</span>
-              </div>
+              </div> -->
           </div>
     </div>
 </div>
