--- a/login/login.html
+++ b/login/login.html
@@ -25,7 +25,7 @@
                  
                 </div>
                   
-                <button class="login-btn">Login</button>
+                <button class="login-btn" onclick="checkLogin()">Login</button>
                 <p>Don't have an account? <b id="sign-up">Sign Up</b></p>
     </section>
  </body>
