--- a/register/register.html
+++ b/register/register.html
@@ -20,7 +20,7 @@
                 <input id="name" class="enter" type="name" placeholder="Name">
                 <label for="password">Password:</label>
                 <input id="password" class="enter" type="password" placeholder="Password">
-                <p>Already have an account? <b onclick="handleSignupClick()">Log in</b></p>
+                <p>Already have an account? <b id="logIn">Log in</b></p>
                  </div>
                   
                 <button class="login-btn" id="signUp-btn">Sign Up</button>
