--- a/video/video.html
+++ b/video/video.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -100,6 +100,7 @@
               type="text"
               placeholder="Add a comment..."
               class="comment-input"
+              id="comment-input"
             />
           </div>
           <div class="comment" id="comments">
@@ -117,7 +118,7 @@
               <p class="comment-text">
                 I couldn't agree more! His music is a safe space for us to
                 explore and navigate our emotions, and that's a true gift
-                <span class="emoji">❤️</span>
+                <span class="emoji">❤</span>
               </p>
             </div>
             </div>
