--- a/video/video.html
+++ b/video/video.html
@@ -60,13 +60,17 @@
             Kashyap | Bharat | UR Debut
           </h4>
           <div class="details-sec">
+            
             <div class="video-left">
+              <div class="left-left"> 
               <img src="./assets/cokestudio.jpg" alt="" />
               <div class="mid-sec">
                 <h4>UR DEBUT</h4>
                 <span>804k subscribers</span>
               </div>
-              <button>Subscribe</button>
+              
+              <button class="subs">Subscribe</button>
+            </div>
             </div>
             <div class="video-right">
               <div class="like-dislike-group">
